# marketsim

./: .gitignore  .gitmodules  LICENSE  README.md  doxyfile  mainpage_doxy.txt
chronos/: CMakeLists.txt  Chronos.cpp  Chronos.hpp  Dockerfile  HowTo.md  README.md  ThreadsafeQueue.hpp  Worker.cpp  Worker.hpp  tests.cpp
example/: main.cpp
gabi/: CMakeLists.txt  README.md  config.hpp  config.ini  main.cpp  settings.hpp
marketsim/: marketsim.hpp  strategies.hpp
marketsim.chronos/: calibrate.hpp  competition.hpp  marketsim.hpp  maslovstrategy.hpp  strategies.hpp  tadpmarketmaker.hpp  tmpatomic.hpp
marketsim/marketsim/: calibrate.hpp  competition.hpp  tests.hpp
marketsim/mscompetitions/: bscompetitions.hpp  dsmaslovcompetition.hpp  luckockcompetition.hpp  maslovcompetition.hpp  originalcompetition.hpp  separatecompetition.hpp  zicompetition.hpp
marketsim/msdss/: fairpriceds.hpp  rawds.hpp
marketsim/msneural/: actions.hpp  config.hpp  data.hpp  models.hpp  proba.hpp  rewards.hpp  utils.hpp
marketsim/msneural/nets/: actorcritic.hpp  netutils.hpp  qnet.hpp
marketsim/msstrategies/: adpmarketmaker.hpp  adpspeculator.hpp  buyer.hpp  cancellingdsstrategy.hpp  dsstrategy.hpp  firstsecondstrategy.hpp  greedystrategy.hpp  heuristicstrategy.hpp  initialstrategy.hpp  leastsquares.hpp  lessnaivemmstrategy.hpp  liquiditytakers.hpp  luckockstrategy.hpp  marketorderplacer.hpp  maslovorderplacer.hpp  maslovstrategy.hpp  naivemmstrategy.hpp  neuralnetstrategy.hpp  parametricmm.hpp  speculator.hpp  stupidtraders.hpp  tadpmarketmaker.hpp  technicalanalyst.hpp  trendspeculator.hpp
marketsim/nets/: actions.hpp  actorcritic.hpp  data.hpp  models.hpp  proba.hpp  rewards.hpp  trainer.hpp  utils.hpp
martin/: CMakeLists.txt  main.cpp
paper/: CMakeLists.txt  main.cpp
peter/: main.cpp
pre.chronos/marketsim/: deprecated.hpp  marketsim.hpp  strategies.hpp
pre.chronos/testms.martin/: main.cpp
pre.chronos/testms.peter/: main.cpp.old
testchronos/: CMakeLists.txt  main.cpp  naivemmstrategy.hpp
testms/: main.cpp  peter.hpp
testms.gabi/: reinforce.hpp
testms.martin/: CMakeLists.txt  main.cpp
testms.peter/: CMakeLists.txt  main.cpp  peter.hpp
theory/: mm.lyx  mm.lyx~
venezzia/: CMakeLists.txt  main.cpp
